# evok

./: .exrc  .gitignore  .gitlab-ci.yml  .project  .readthedocs.yaml  API_docs.md  Dockerfile  LICENSE  README.TXT  README.md  __old_setup.py  api_docs.raml  dependencies.txt  docker-compose.yml  docker.evok.iris  evok.conf  install-evok.sh  issue_template.md  mkdocs.yml  pyproject.toml  requirements.txt  set_adc_coef.py  setup.py  uninstall-evok.sh  version.txt  versioning.txt
.gitlab-ci-scripts/: mirror_to_GitHub.sh  update_version_consts.sh
UnipiDali/: __init__.py
asyncowfs/: __init__.py  bus.py  device.py  error.py  event.py  protocol.py  server.py  service.py  util.py
debian/: README  changelog  config  config.yaml  control  copyright  end_of_changelog  evok-web.config  evok-web.install  evok-web.links  evok-web.postinst  evok-web.postrm  evok-web.preinst  evok-web.templates  evok.conffiles  evok.default  evok.install  evok.links  evok.postinst  evok.postrm  evok.preinst  evok.prerm  evok.service  evok.templates  evok.triggers  rules
doc/: mereni_analog_out.ods
docker/: Dockerfile  build.sh  docker-compose.yml  docker-nginx.conf  entrypoint.sh
docs/: ProgramStructure.txt  apis.md  circuit.md  debugging.md  index.md  installation.md  requirements.in  requirements.txt
etc/: config.yaml  evok-axon.conf  evok-lite.conf  evok-neuron.conf  evok-unipi1.1.conf  evok.conf
evok/: __init__.py  __main__.py  apigpio.py  config.py  devents.py  devices.py  errors.py  evok.py  extcontrols.py  features.py  handler_mqtt.py  handler_rpc.py  handler_webhook.py  hwnames.py  (+21 more)
(+225 files in other folders)
